# autogen

./: .gitignore  404.html  README.md  debug.py  environment.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  pypi-publish.yml
api/: index.html
backup/: input.py  input1.py  input2.py  input3.py  make_op.py  test_ccsd.py  test_simple_op.py  vt1test.py
backup/debug_files/: debug.py
backup/debug_files/backup/: compare.py
backup/debug_files/backup/library_activeorb/: make_op.py
backup/ucc_terms/ucc_2c/: input1.py
backup/uccsd_terms/: input.py
concepts/: index.html
docs/: api.md  concepts.md  index.md  installation.md  io.md  overview.md  performance.md  testing.md  usage.md  work_log.md
installation/: index.html
io/: index.html
main_tools/: commutator.py  product.py
method_inputs/: README.md  __init__.py
method_inputs/ccsd/: __init__.py  ccsd_spec.py
method_inputs/eom_ccsd/: __init__.py  ee_eom_ccsd_spec.py
overview/: index.html
performance/: index.html
pkg/: ewt.py  fewt.py  fix_uv.py  func_ewt.py  make_c.py  returnop.py
scripts/: bench_compare.py  ccsd_term_diff.py  compare_eom_matvec.py  gen_einsum.py  profile_compare_hotspots.py  profile_term_breakdown.py  time_ccsd_full.py  time_ccsd_terms.py
search/: search_index.json
specs/: ccsd_spec.py
src/autogen/main_tools/: commutator.py  driv3.py  multi_cont.py  product.py
src/autogen/pkg/: ewt.py  fewt.py  fix_uv.py  func_ewt.py  make_c.py  numba_contractions.py  parity.py  returnop.py
testing/: index.html
tests/: basic_test.py  ccsd_amplitude.py  ccsd_amplitude_prodtest.py  debugcases.py  test_ccsd_pyscf.py  test_eom_ccsd_pyscf.py  test_gen_spec.py  test_perf_features.py
tests/molecules/: __init__.py  cases.py
usage/: index.html
work_log/: index.html
