[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen"
version = "0.1.0"
description = "Automatic expression generator using Wick's theorem for quantum chemistry."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "UNLICENSED" }
authors = [{ name = "Ayush Asthana" }]

# Keep dependencies empty for now; this repo appears self-contained.
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["autogen*"]

[tool.setuptools.exclude-package-data]
"*" = ["backup/**", "tests/**", "**/__pycache__/**"]
