[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "autogen-wick"
version = "0.1.0"
description = "Automatic Wick's theorem expression generator for quantum chemistry (unitary coupled cluster, CC, etc)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ayush Asthana" }]
urls = { "Homepage" = "https://github.com/asthanaa/autogen", "Documentation" = "https://asthanaa.github.io/autogen/" }
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Operating System :: OS Independent",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Chemistry",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["autogen*"]

[tool.setuptools.exclude-package-data]
"*" = ["backup/**", "tests/**", "**/__pycache__/**"]
